# MedvedDB

./: .gitignore  CMakeLists.txt  Doxyfile  NOTICE  README.md
cmake/: doxygen.cmake  sanitizer.cmake
conf/: medved.conf
core/: CMakeLists.txt  mdv_config.c  mdv_config.h
mdv_api/: CMakeLists.txt  mdv_channel.c  mdv_channel.h  mdv_client.c  mdv_client.h  mdv_client_config.h  mdv_connection.c  mdv_connection.h  mdv_handler.c  mdv_handler.h  mdv_messages.c  mdv_messages.h  mdv_proto.c  mdv_proto.h  mdv_protocol.h  mdv_status.c  mdv_status.h  mdv_user.c  mdv_user.h
mdv_bindings/: CMakeLists.txt
mdv_bindings/mdb/: CMakeLists.txt
mdv_bindings/mdb/java/: CMakeLists.txt  mdb_svc4j.c  mdv_svc4j.c
mdv_bindings/mdv/: CMakeLists.txt
mdv_bindings/mdv/java/: CMakeLists.txt  mdv_api4j.c
mdv_client/: CMakeLists.txt  main.c  mdv_cout.c  mdv_cout.h
mdv_core/: CMakeLists.txt  mdv_broadcaster.c  mdv_broadcaster.h  mdv_cluster.c  mdv_cluster.h  mdv_committer.c  mdv_committer.h  mdv_conctx.c  mdv_conctx.h  mdv_config.c  mdv_config.h  mdv_conman.c  mdv_conman.h  mdv_core.c  mdv_core.h  mdv_datasync.c  mdv_datasync.h  mdv_fetcher.c  mdv_fetcher.h  mdv_gossip.c  mdv_gossip.h  mdv_listener.c  mdv_listener.h  mdv_node.c  mdv_node.h  mdv_p2pmsg.c  mdv_p2pmsg.h  mdv_peer.c  mdv_peer.h  mdv_server.c  mdv_server.h  mdv_service.c  mdv_service.h  mdv_syncer.c  mdv_syncer.h  mdv_syncerino.c  mdv_syncerino.h  mdv_syncerlog.c  mdv_syncerlog.h  mdv_tracker.c  (+3 more)
mdv_core/event/: mdv_broadcast.c  mdv_broadcast.h  mdv_evt_broadcast.c  mdv_evt_broadcast.h  mdv_evt_link.c  mdv_evt_link.h  mdv_evt_routes.c  mdv_evt_routes.h  mdv_evt_rowdata.c  mdv_evt_rowdata.h  mdv_evt_status.c  mdv_evt_status.h  mdv_evt_table.c  mdv_evt_table.h  mdv_evt_tables.c  mdv_evt_tables.h  mdv_evt_topology.c  mdv_evt_topology.h  mdv_evt_trlog.c  mdv_evt_trlog.h  mdv_evt_types.h  mdv_evt_view.c  mdv_evt_view.h  mdv_link.c  mdv_link.h  mdv_node.c  mdv_node.h  mdv_routes.c  mdv_routes.h  mdv_table.c  mdv_table.h  mdv_topology.c  mdv_topology.h  mdv_trlog.c  mdv_trlog.h  mdv_types.h
mdv_core/storage/: mdv_bigint.h  mdv_cfstorage.c  mdv_cfstorage.h  mdv_idmap.c  mdv_idmap.h  mdv_joiner.c  mdv_joiner.h  mdv_key.h  mdv_map.h  mdv_metainf.c  mdv_metainf.h  mdv_names.c  mdv_nodes.c  mdv_nodes.h  mdv_objects.c  mdv_objects.h  mdv_predicate.c  mdv_predicate.h  mdv_rowdata.c  mdv_rowdata.h  mdv_rowdata_view.c  mdv_rowdata_view.h  mdv_serialization.h  mdv_sql.l  mdv_sql.y  mdv_sql_lexer.c  mdv_sql_lexer.h  mdv_sql_lexer.output  mdv_sql_parser.c  mdv_storage.c  mdv_storage.h  mdv_storages.c  mdv_storages.h  mdv_table.c  mdv_table.h  mdv_tables.c  mdv_tables.h  mdv_tables_view.c  mdv_tables_view.h  mdv_tablespace.c  (+6 more)
mdv_core/storage/async/: mdv_nodes.c  mdv_nodes.h
mdv_core/storage/ops/: mdv_op.c  mdv_op.h  mdv_scan_seq.c  mdv_scan_seq.h
mdv_crypto/: CMakeLists.txt  mdv_ecc.c  mdv_ecc.h  mdv_rand.c  mdv_rand.h  mdv_sha3.c  mdv_sha3.h
mdv_net/: CMakeLists.txt  mdv_chaman.c  mdv_chaman.h  mdv_channel.c  mdv_channel.h  mdv_dispatcher.c  mdv_msg.c  mdv_msg.h  mdv_netaddr.c  mdv_netaddr.h  mdv_socket.c  mdv_socket.h  mdv_transport.c  mdv_transport.h  mdv_trfd.c  mdv_trfd.h  mdv_trtcp.c
mdv_platform/: CMakeLists.txt  mdv_algorithm.c  mdv_algorithm.h  mdv_alloc.c  mdv_alloc.h  mdv_bigint.h  mdv_binn.c  mdv_binn.h  mdv_bitset.c  mdv_bitset.h  mdv_bloom.c  mdv_bloom.h  mdv_bloom_filter.h  mdv_chaman.c  mdv_chaman.h  mdv_channel.h  mdv_cluster.c  mdv_cluster.h  mdv_condvar.c  mdv_condvar.h  mdv_def.c  mdv_def.h  mdv_deque.c  mdv_deque.h  mdv_dijkstra.c  mdv_dijkstra.h  mdv_dispatcher.c  mdv_dispatcher.h  mdv_ebus.c  mdv_ebus.h  mdv_enumerator.c  mdv_enumerator.h  mdv_epoll.c  mdv_epoll.h  mdv_errno.c  mdv_errno.h  mdv_eventfd.c  mdv_eventfd.h  mdv_file.c  mdv_file.h  (+67 more)
mdv_platform/generic/: mdv_algorithm.c  mdv_algorithm.h  mdv_alloc.c  mdv_alloc.h  mdv_assert.h  mdv_bitset.c  mdv_bitset.h  mdv_bloom.c  mdv_bloom.h  mdv_btree.c  mdv_btree.h  mdv_functional.h  mdv_hash.c  mdv_hash.h  mdv_hashmap.c  mdv_hashmap.h  mdv_list.c  mdv_list.h  mdv_macros.h  mdv_mst.c  mdv_mst.h  mdv_stack.h  mdv_string.h  mdv_vector.c  mdv_vector.h
mdv_service/: CMakeLists.txt  main.c
mdv_storage/: CMakeLists.txt  mdv_2pset.c  mdv_2pset.h  mdv_buffer_manager.c  mdv_buffer_manager.h  mdv_lmdb.c  mdv_lmdb.h  mdv_map.h  mdv_names.c  mdv_paginator.c  mdv_paginator.h  mdv_predicate.c
mdv_storage/ops/: mdv_op.c  mdv_op.h  mdv_project.c  mdv_project.h  mdv_scan_seq.c  mdv_scan_seq.h  mdv_select.c  mdv_select.h
mdv_tests/: CMakeLists.txt  main.c  mdv_core.h  mdv_crypto.h  mdv_platform.h  mdv_storage.h  mdv_types.h
mdv_tests/mdv_core/: mdv_serialization.h
mdv_tests/mdv_core/storage/: mdv_predicate.h
mdv_tests/mdv_crypto/: mdv_ecc.h
mdv_tests/mdv_platform/: mdv_algorithm.h  mdv_bitset.h  mdv_bloom.h  mdv_bloom_filter.h  mdv_btree.h  mdv_chaman.h  mdv_condvar.h  mdv_deque.h  mdv_dispatcher.h  mdv_ebus.h  mdv_eventfd.h  mdv_filesystem.h  mdv_hashmap.h  mdv_jobber.h  mdv_list.h  mdv_lrucache.h  mdv_mst.h  mdv_queue.h  mdv_queuefd.h  mdv_rollbacker.h  mdv_router.h  mdv_socket.h  mdv_stack.h  mdv_string.h  mdv_threadpool.h  mdv_topology.h  mdv_vector.h  mdv_vm.h
mdv_tests/mdv_storage/: mdv_paginator.h  mdv_predicate.h
mdv_tests/mdv_storage/ops/: mdv_project.h  mdv_scan_list.c  mdv_scan_list.h  mdv_scan_seq.h  mdv_select.h  mdv_test_utils.c  mdv_test_utils.h
mdv_tests/mdv_types/: mdv_rowset.h  mdv_serialization.h  mdv_table.h  mdv_table_desc.h
mdv_thirdparty/: CMakeLists.txt  LICENSES.txt
mdv_thirdparty/lmdb/: CMakeLists.txt
mdv_types/: CMakeLists.txt  mdv_ctypes.h  mdv_data.h  mdv_datum.c  mdv_datum.h  mdv_field.c  mdv_field.h  mdv_objid.c  mdv_objid.h  mdv_resultset.c  mdv_resultset.h  mdv_row.c  mdv_row.h  mdv_rowset.c  mdv_rowset.h  mdv_serialization.c  mdv_serialization.h  mdv_systbls.c  mdv_systbls.h  mdv_table.c  mdv_table.h  mdv_table_desc.c  mdv_table_desc.h  mdv_types.c  mdv_types.h  mdv_version.h
platform/: CMakeLists.txt  mdv_alloc.c  mdv_alloc.h  mdv_socket.h  mdv_string.c  mdv_string.h
platform/linux/: mdv_socket.c
service/: CMakeLists.txt
(+47 files in other folders)
